--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ EthereumEnv/Cloud/.vs/BlockChainPoint/v15/.suo
 .vs/slnx.sqlite
 .vs/ProjectSettings.json
 EthereumDApp/xunit.xml
+EthereumEnv/Cloud/.vs/BlockChainPoint/DesignTimeBuild/.dtbcache
+.vs/VSWorkspaceState.json
