Adding mimemap for css

--- a/EthereumDApp/app/Web.config
+++ b/EthereumDApp/app/Web.config
@@ -6,6 +6,7 @@
             <remove fileExtension=".json" />
             <mimeMap fileExtension=".json" mimeType="application/json" />
             <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+            <mimeMap fileExtension=".css" mimeType="application/css" />
      </staticContent>
     </system.webServer>
 </configuration> 
